--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@ai-sdk/openai": "^3.0.26",
     "ai": "^6.0.77",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
